--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
  
+<header>
+ <title>Dasmoto's Arts and Crafts</title>
+ </header>
+ 
 <body>
-  <h1>Magnús</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ <h2>Brushes</h2>
+  <h4>Hacksaw Brushes</h4>
+   
 </body>
  
 </html>
