--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
  
 <header>
- <title>Dasmoto's Arts and Crafts</title>
- </header>
+ <h1>Dasmoto's Arts and Crafts</h1>
+</header>
  
 <body>
  <h2>Brushes</h2>
