--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
 </header>
  
 <body>
+ <img src="https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg"></img>
+ 
  <h1>Dasmoto's Arts and Crafts</h1>
+ 
  <h2>Brushes</h2>
-  <h4>Hacksaw Brushes</h4>
-   
+ 
+ <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg"></img>
+      
+ <h4>Hacksaw Brushes</h4>
+
+ <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.</p> <
+
 </body>
  
 </html>
