--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </header>
  
 <body>
- <img src="https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg"></img>
+ <img src=""></img> <!-- put this in: https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg -->
  
  <h1>Dasmoto's Arts and Crafts</h1>
  
@@ -17,6 +17,23 @@
 
  <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.</p> <
 
+
+<h2>Frames</h2>
+
+<img src=""> <img>
+
+<h4>Art Frames (assorted)</h4>
+
+<p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. </p>
+
+
+<h2>Paint </h2>
+
+<img src=""> <img>
+
+<h4>Clean Finnish Paint</h4>
+
+<p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.</p>
 </body>
  
 </html>
